[package]
name = "weatherwax"
version = "0.1.0"
edition = "2021"

[lib]
name = "weatherwax"
path = "src/lib.rs"

[[bin]]
name = "weatherwax-runner"
path = "src/runner/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
futures = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"

async-openai = { version = "0.19.0", optional = true }


[features]
openai = ["async-openai"]
