[package]
name = "weatherwax"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = { version = "0.19.0", optional = true }

axum = { version = "0.7", features = ["macros"] }
futures = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
config = "0.14.0"
secrecy = "0.8.0"
log = "0.4.20"
env_logger = "0.11.3"
dotenvy = "0.15.7"
async-trait = "0.1.77"


[features]
openai = ["async-openai"]
